Fix board orientation and spacing

--- a/web/components/Tile.module.css
+++ b/web/components/Tile.module.css
@@ -6,8 +6,8 @@
     margin: -0.5px;
 
     /* For bonus/penalty text */
-    vertical-align: middle;
-    display: table-cell;
+    /* vertical-align: middle; */
+    /* display: table-cell; */
     text-align: center;
 }
 
